Fix globe/timeline overlap: globe scrolls away, timeline starts below it

--- a/globe.css
+++ b/globe.css
@@ -21,11 +21,12 @@
 }
 
 #globeViz {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100vh;
+    height: 100dvh;
     z-index: 1;
 }
 
